--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.3"
   },
